--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Raleway:wght@400;500;600&family=Roboto&display=swap"
         rel="stylesheet">
+        <script src="codewars.js"></script>
+        <script src="frc.js"></script>
 </head>
 
 <body>
